<resources>
    <string name="app_name">SpaceDeliveryMan</string>

    <!-- Formatted -->
    <string name="ugs_formatted_text">UGS: %1$d</string>
    <string name="eus_formatted_text">EUS : %1$d</string>
    <string name="ds_formatted_text">DS: %1$d</string>
    <string name="capacity_formatted_text">Depo Kapasitesi: %1$d</string>
    <string name="distance_from_earth_formatted_text">Dünya\'ya Uzaklığı: %1$.2f Işık Yılı</string>
    <string name="station_name_formatted_text">İstasyon Adı : %1$s</string>
    <string name="station_stock_formatted_text">İstasyon Stok Miktarı : %1$d</string>
    <string name="station_need_formatted_text">İstasyon İhtiyacı : %1$d</string>
    <string name="counter_formatted_text">%1$d s</string>
    <string name="station_distance_formatted_text">%1$.2f Işık Yılı</string>

    <!-- Properties -->
    <string name="durability_property_text">Dayanıklılık - %1d</string>
    <string name="speed_property_text">Hız - %1d</string>
    <string name="capacity_property_text">Kapasite - %1d</string>

    <!-- Hint -->
    <string name="ship_name_hint">Gemi Adı</string>
    <string name="search_hint">İstasyon Ara</string>

    <!-- Button Text -->
    <string name="continue_button_text">Devam Et</string>
    <string name="travel_button_text">Seyehat Et</string>

    <!-- Tabs -->
    <string name="station_tab_text">İstasyonlar</string>
    <string name="favorite_tab_text">Favoriler</string>

    <!-- Titles -->
    <string name="favorite_title">Favoriler</string>
    <string name="total_point_text">Dağıtılacak Puan : 15</string>


    <!-- Warning Text -->
    <string name="not_active_station_found_text">Aktif İstasyon Bulunmamaktadır.</string>

</resources>