<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SpaceshipFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/total_point_formatted_text"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ship_name_hint"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.example.spacedeliveryman.custom.PropertySelectionView
            android:id="@+id/propertySelectionView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/propertySelectionView2"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:propertyTitle="@string/durability_property_text" />

        <com.example.spacedeliveryman.custom.PropertySelectionView
            android:id="@+id/propertySelectionView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/propertySelectionView3"
            app:layout_constraintEnd_toEndOf="@+id/propertySelectionView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/propertySelectionView"
            app:layout_constraintTop_toBottomOf="@+id/propertySelectionView"
            app:propertyTitle="@string/speed_property_text" />

        <com.example.spacedeliveryman.custom.PropertySelectionView
            android:id="@+id/propertySelectionView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/propertySelectionView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/propertySelectionView2"
            app:layout_constraintTop_toBottomOf="@+id/propertySelectionView2"
            app:propertyTitle="@string/capacity_property_text" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/continue_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/propertySelectionView2"
            app:layout_constraintStart_toStartOf="@+id/propertySelectionView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>