<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.spacedeliveryman.ui.station.StationsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.station.StationsFragment">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/ugs_formatted_text(viewModel.ugs)}"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/divider4"
            tools:text="@string/ugs_formatted_text" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@{@string/eus_formatted_text(viewModel.eus)}"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/eus_formatted_text" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/ds_formatted_text(viewModel.ds)}"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/divider4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            tools:text="@string/ds_formatted_text" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{viewModel.shipName ?? ""}'
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/divider4"
            tools:text="WhartonX" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{viewModel.shipDamage}"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/divider4"
            tools:text="100" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/divider4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            tools:text="49s" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:queryHint="@string/search_hint"
            app:queryText="@={viewModel.stationNameSearchText}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/station_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="@+id/searchView2"
            app:layout_constraintStart_toStartOf="@+id/searchView2"
            app:layout_constraintTop_toBottomOf="@+id/searchView2"
            app:stationList="@{viewModel.stations}"
            tools:listitem="@layout/list_item_stations" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text='@{viewModel.activeStationName ?? @string/not_active_station_found_text}'
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/not_active_station_found_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>